playbook/app/pb_kits/playbook/pb_advanced_table/scss_partials/advanced_table_sticky_mixin.scss
@mixin advanced-table-sticky-mixin(
  $border-color,
  $bg-main,
  $bg-secondary,
  $highlight: #E5EEFA,
  $highlight-dark: #202850,
) {
  border-radius: 4px;
  box-shadow: 1px 0 0 0px $border-color, -1px 0 0 0px $border-color;
  display: block;

  // Handle both table-card and non-table-card cases
  [class^="pb_table"].table-sm.table-card thead tr th:first-child,
  [class^="pb_table"].table-sm:not(.no-hover).table-card tbody tr td:first-child,
  [class^="pb_table"].table-sm:not(.table-card) thead tr th:first-child,
  [class^="pb_table"].table-sm:not(.no-hover):not(.table-card) tbody tr td:first-child {
    border-left-width: 0px !important;
  }

  [class^="pb_table"].table-sm.table-card thead tr th:last-child,
  [class^="pb_table"].table-sm:not(.no-hover).table-card tbody tr td:last-child,
  [class^="pb_table"].table-sm:not(.table-card) thead tr th:last-child,
  [class^="pb_table"].table-sm:not(.no-hover):not(.table-card) tbody tr td:last-child {
    border-right-width: 0px;
  }

  [class^="pb_table"].table-sm.table-card tbody tr:last-child td:first-child,
  [class^="pb_table"].table-sm.table-card tbody tr:last-child td:last-child,
  [class^="pb_table"].table-sm:not(.table-card) tbody tr:last-child td:first-child,
  [class^="pb_table"].table-sm:not(.table-card) tbody tr:last-child td:last-child {
    border-radius: 0 0 0 0;
  }

  .table-header-cells:first-child,
  td:first-child,
  .pb_table_td:first-child,
  .checkbox-cell.checkbox-cell-header:first-child,
  .table-header-cells.sticky-left,
  [class*="pinned-left"] {
    background-color: $bg-main;
    box-shadow: $shadow_deep !important;
    position: sticky !important;
    left: 0;
    z-index: 2;
  }

  // For tables with verticalBorder, ensure sticky elements maintain their borders
  [class^="pb_table"].vertical-border {
    .table-header-cells:first-child,
    td:first-child,
    .pb_table_td:first-child,
    .checkbox-cell.checkbox-cell-header:first-child,
    .table-header-cells.sticky-left {
      // Maintain right border for vertical border styling when sticky
      &:not(:last-child) {
        border-right: 1px solid $border-color !important;
      }
    }

    // Ensure pinned rows maintain vertical borders
    .pinned-row {
      td:not(:last-child),
      .pb_table_td:not(:last-child) {
        border-right: 1px solid $border-color !important;
      }
    }

    // Handle sticky header with vertical borders
    &.sticky-header thead th {
      &:not(:last-child) {
        border-right: 1px solid $border-color !important;
      }
    }
  }

  .bg-silver {
    td:first-child,
    .sticky-left {
      background-color: $bg-secondary;
    }
  }

  .bg-row-selection {
    td:first-child,
    .sticky-left {
      background-color: $highlight;
    }
  }

  .bg-white {
    td:first-child,
    .sticky-left {
      background-color: $bg-main;
    }
  }

  .virtualized-table-row {
    &.bg-silver td:first-child {
      background-color: $bg-secondary;
    }
    &.bg-white td:first-child {
      background-color: $bg-main;
    }
    &.bg-row-selection td:first-child {
      background-color: $highlight;
    }
  }

  .row-selection-actions-card {
    border-right-width: 0px;
    border-left-width: 0px;
    position: sticky;
    top: 0;
    left: 0;
    border-radius: unset;
    z-index: 5;
  }

  .checkbox-cell {
    display: table-cell !important;
  }

  .sticky-header {
    thead {
      th:first-child {
        box-shadow: 1px 0 10px -2px $border-color !important;
      }
    }

    .pb_advanced_table_header {
      box-shadow: none !important;
    }
  }

  &.dark {
    .bg-row-selection {
      td:first-child,
      .sticky-left {
        background-color: $highlight-dark;
      }
    }
    .virtualized-table-row {
      &.bg-row-selection td:first-child {
        background-color: $highlight-dark;
      }
    }
  }
}

